<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="53dp"
    android:background="@color/colorPrimary"
    android:translationZ="5dp">

    <com.mita.wanandroid.view.IconFontView
        android:id="@+id/ifv_title_left"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:includeFontPadding="false"
        android:text="@string/icon_back"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mita.wanandroid.view.IconFontView
        android:id="@+id/ifv_title_right"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/icon_share" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ifv_title_right"
        app:layout_constraintStart_toEndOf="@id/ifv_title_left"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_middle_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_middle_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/main_tab_project"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <com.mita.wanandroid.view.IconFontView
            android:id="@+id/ifv_expand"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/icon_down"
            android:textColor="@color/white"
            android:textSize="10dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>